# Raspberry-PI-Gateway

./: .editorconfig  .env.example  .gitignore  .prettierrc  .style.yapf  COMMIT_MESSAGE.txt  COPILOT_GUIDELINES.md  README.md  docker-compose.yml  git_push.ps1
backend/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  easyberry_config.example.json  easyberry_last_auth.json  polling_config.json  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: auth.py  debug.py  easyberry.py  modbus.py  points.py  router.py  settings.py
backend/app/core/: logging.py  security.py  settings.py
backend/app/modules/: crypto.py
backend/app/modules/hw/: __init__.py  gpio_mock.py  gpio_pi.py  interfaces.py
backend/app/modules/sw/: __init__.py  interfaces.py  modbus_tcp_client.py  run_polling_example.py
backend/app/modules/sw/cli/: __init__.py  models.py  registry.py  router.py
backend/app/modules/sw/cli/commands/: __init__.py  echo.py  getvar.py  health.py  hello.py  last_req.py  pollers.py
backend/app/modules/sw/easyberry/: auth.py  config.py  connector.py  easyberry_cli.py  error_logger.py  get_database.py  inspect_cli.py  loader.py  packet_store.py  runner.py  store.py  transport.py
backend/app/modules/sw/modbus/: __init__.py  interfaces.py  modbus_tcp_client.py  polling.py
backend/tests/: test_auth.py  test_cli_registry.py  test_cli_router.py  test_easyberry.py  test_easyberry_auth.py  test_easyberry_connector.py  test_easyberry_transport.py  test_health.py  test_modbus.py
deprecated/: interfaces.py  modbus_tcp_client.py  polling.py
(+63 files in other folders)
